testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket_or_hexadecimal/case13.expect.out
error: expected '}' or hexadecimal digit in unicode escape, found '"'
  ==> case13.cj:15:16:
   | 
15 |     cangjie \u{123""""\u{123"
   |             ~~    ^ expected '}' or hexadecimal digit
   |             |
   |             because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

error: expected '}' or hexadecimal digit in unicode escape, found '"'
  ==> case13.cj:15:26:
   | 
15 |     cangjie \u{123""""\u{123"
   |                       ~~    ^ expected '}' or hexadecimal digit
   |                       |
   |                       because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

2 errors generated, 2 errors printed.
